objects/kugo2p__Settings__c.object
<CustomObject>
    <description>Kugamon - Related object to Kugamon Settings. For Admin use only.</description>
    <fields>
        <fullName>kugo2p__Admin_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Administrator User, who is the designated User to receive important payment notifications and error messages.

Value can differ from Administrator User on Kugamon Settings.</description>
        <inlineHelpText>Lookup to the Administrator User, who is the designated User to receive important payment notifications and error messages.

Value can differ from Administrator User on Kugamon Settings.</inlineHelpText>
        <label>Administrator User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Apex_Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables debugging methods.  This box should be unchecked unless troubleshooting the application.</inlineHelpText>
        <label>Debugging Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Assign_Events_To__c</fullName>
        <inlineHelpText>When event tasks are created (payments skipped, dispute notifications, etc), this setting determines who each task will be assigned to.</inlineHelpText>
        <label>Assign Events To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin User</fullName>
                    <default>true</default>
                    <label>Admin User</label>
                </value>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Gateway_Simulation_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When the Test Mode box is checked, this option allows you to run test transactions without actually sending transactions to payment processor gateway.</inlineHelpText>
        <label>Gateway Simulation Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__KugamonSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kugamon Setting</label>
        <referenceTo>kugo2p__KugamonSetting__c</referenceTo>
        <relationshipName>PaymentConnect_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Tax__c</fullName>
        <description>Field and related function has been deprecated. Do not display field on the page layout.</description>
        <inlineHelpText>Default tax percentage to display in payment terminal.</inlineHelpText>
        <label>Deprecated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__Transaction_Logging__c</fullName>
        <inlineHelpText>Controls the level of detail in log entries for each transaction.</inlineHelpText>
        <label>Transaction Logging</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detailed</fullName>
                    <default>true</default>
                    <label>Detailed</label>
                </value>
                <value>
                    <fullName>Brief</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Update_Opp_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field and related function has been deprecated. Do not display field on the page layout.</description>
        <inlineHelpText>Enables the trigger to auto-update payment-related fields on opportunities.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Update_Shopping_Cart_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field and related function has been deprecated. Do not display field on the page layout.</description>
        <inlineHelpText>Enables the auto-update of related shopping cart items when a payment record is processed.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Setting</label>
    <nameField>
        <label>Payment Setting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>